Starker headings, fixed BG and footer spacing

--- a/app/webroot/css/kickoff.app.css
+++ b/app/webroot/css/kickoff.app.css
@@ -3,6 +3,7 @@ footer {
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
   color: #FFF;
   overflow: hidden;
+  padding: 2rem;
 }
 
 /* line 1, ../sass/_base/_forms.scss */
@@ -49,7 +50,7 @@ h2, form, input {
 
 /* line 2, ../sass/_base/_layout.scss */
 body {
-  background: url(/img/photos/girl-on-mac-in-park.jpg) no-repeat 50% 50%;
+  background: fixed url(/img/photos/girl-on-mac-in-park.jpg) no-repeat 50% 50%;
   background-size: cover;
   padding: 4rem 0 0;
 }
@@ -170,9 +171,11 @@ body, h1, h2, h3 {
 
 /* line 5, ../sass/_base/_typography.scss */
 h2 {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.8);
   color: rgba(255, 255, 255, 0.8);
-  margin: 1rem auto;
+  letter-spacing: 0.5rem;
+  margin: 1rem auto 2rem;
+  padding: 1rem;
   text-transform: uppercase;
 }
 
@@ -537,4 +540,11 @@ h2 {
 .avatar {
   height: 2rem;
   padding: 0.5rem;
+}
+
+/* line 6, ../sass/_components/_users.scss */
+.social, .email {
+  display: inline-block;
+  vertical-align: top;
+  width: 49%;
 }
