--- a/app/webroot/sass/_base/_footer.scss
+++ b/app/webroot/sass/_base/_footer.scss
@@ -2,4 +2,5 @@ footer {
   background: -webkit-linear-gradient(rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
   color: #FFF;
   overflow: hidden;
+  padding: 2rem;
 }
