--- a/app/webroot/sass/_base/_layout.scss
+++ b/app/webroot/sass/_base/_layout.scss
@@ -1,6 +1,6 @@
 
 body {
-  background: url(/img/photos/girl-on-mac-in-park.jpg) no-repeat 50% 50%;
+  background: fixed url(/img/photos/girl-on-mac-in-park.jpg) no-repeat 50% 50%;
   background-size: cover;
   padding: 4rem 0 0;
 }
